changed color system and removed the secondary color, from now on, the app will create secondary colors by adjusting hues of the primary color if needed. Also fixed bugs in dark mode toggle switch and sidebar nav color schemes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -265,13 +265,17 @@ ul {
   transform: rotate(90deg);
   transform-origin: bottom left;
   left: 8px;
-  // margin-top: 12px;
+  color: var(--body-color);
   font-size: 14px;
   background-color: transparent;
   &:hover{
     background-color: transparent;
     text-decoration: underline;
   }
+}
+
+.react-switch{
+  z-index: 2;
 }
 
 .background-quote{
